offlineimap (2.0.5) unstable; urgency=low

  * Placeholder

 -- John Goerzen <jgoerzen@complete.org>  Fri,  5 Jul 2002 09:21:52 -0500

offlineimap (2.0.4) unstable; urgency=low

  * Made OfflineIMAP at least rudimentarily compatible with read-only
    folders.  It will still fail if they get modified locally, though.
  * Flags are handled case-insensitively.  Closes: #151993.

 -- John Goerzen <jgoerzen@complete.org>  Fri,  5 Jul 2002 09:10:29 -0500

offlineimap (2.0.3) unstable; urgency=low

  * Added support for specifying references.  Closes: #151960.
  * Added -d command-line option to enable imaplib debugging.

 -- John Goerzen <jgoerzen@complete.org>  Thu,  4 Jul 2002 20:39:29 -0500

offlineimap (2.0.2) unstable; urgency=low

  * Added support for remotepassfile.  Closes: #151943.
  * Added support for preauth tunnels.

 -- John Goerzen <jgoerzen@complete.org>  Thu,  4 Jul 2002 14:46:23 -0500

offlineimap (2.0.1) unstable; urgency=low

  * Fixed a bug with not properly propogating foldersep changes.
    Now, local folders and status folders properly use the foldersep
    mechanism.  This corrects a problem with Exchange servers.
  * Wrote a major new thread montiring subsystem, defined a new
    ExitNotifyThread.  Handling of Ctrl-C now occurs within 1 second
    rather than after the whole program terminates.  Exceptions that
    occur in a thread are now caught by the main thread and marshalled
    over into the UI side of things for dispatch.  The entire program will
    now abort when one thread dies with an exception.

 -- John Goerzen <jgoerzen@complete.org>  Thu,  4 Jul 2002 09:07:06 -0500

offlineimap (2.0.0) unstable; urgency=low

  * This code is now multithreaded.  New config file options control the
    behavior.  This can make synchronizing several times faster.
  * Fixed the STATUS call to be compatible with Exchange.
  * Added the ability to exclude folders.
  * If upgrading from 1.0.x, you will need to add maxsyncaccounts to the