@@ -79,6 +79,15 @@ footer = "\n"
 # for each account listed in general/accounts above.
 
 [Test]
+
+########## Basic settings
+
+# Specify local repository.  Your IMAP folders will be synchronized
+# to maildirs created under this path.  OfflineIMAP will create the
+# maildirs for you as needed.
+
+localfolders = ~/Test
+
 # Specify the remote hostname.
 remotehost = examplehost
 
@@ -118,18 +127,15 @@ remoteuser = username
 # preauthtunnel = ssh -q imaphost '/usr/bin/imapd ./Maildir'
 #
 
+########## Advanced settings
+
+
 # Some IMAP servers need a "reference" which often refers to the
 # "folder root".  This is most commonly needed with UW IMAP, where
 # you might need to specify the directory in which your mail is
 # stored.  Most users will not need this.
 #
 # reference = Mail
-
-# Specify local repository.  Your IMAP folders will be synchronized
-# to maildirs created under this path.  OfflineIMAP will create the
-# maildirs for you as needed.
-
-localfolders = ~/Test
 
 # You can specify a folder translator.  This must be a eval-able
 # Python expression that takes a foldername arg and returns the new
@@ -178,6 +184,27 @@ localfolders = ~/Test
 # And exclude every folder with:
 #
 # folderfilter = lambda foldername: 0
+
+# You can specify folderincludes to include additional folders.
+# It should return a Python list.  This might be used to include a
+# folder that was excluded by your folderfilter rule, to include a
+# folder that your server does not specify with its LIST option, or
+# to include a folder that is outside your basic reference.  Some examples:
+#
+# To include debian.user and debian.personal:
+#
+# folderincludes = ['debian.user', 'debian.personal']
+#
+# To include your INBOX (UW IMAPd users will find this useful if they
+# specify a reference):
+#
+# folderincludes = ['INBOX']
+#
+# To specify a long list:
+#
+# folderincludes = ['box1', 'box2', 'box3', 'box4',
+#                   'box5', 'box6']
+
 
 # OfflineIMAP can use multiple connections to the server in order
 # to perform multiple synchronization actions simultaneously.
